hphp/hack/test/typecheck/method_redeclaration_removed_static_method.php.exp
File "method_redeclaration_removed_static_method.php", line 14, characters 6-6:
No static method 'f' in C (did you mean 'g'?) (Typing[4090])
File "method_redeclaration_removed_static_method.php", line 7, characters 7-7:
Declaration of C is here
