hphp/hack/test/typecheck/method_redeclaration_removed_static_method.php
<?hh // strict

trait T {
  public static function f(): void {}
}

class C {
  use T;

  public static function g(): void = T::f;
}

function f(): void {
  C::f();
}
